<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/comment_high"
    tools:context=".CommentActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerComments"
        android:layout_width="262dp"
        android:layout_height="169dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/tvReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/txt_return"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateYourOwn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/btnMake"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/btnMake"
        app:layout_constraintTop_toBottomOf="@+id/btnMake" />

    <Button
        android:id="@+id/btnMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/btnMake"
        app:layout_constraintEnd_toEndOf="@+id/tvReturn"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/tvReturn"
        app:layout_constraintTop_toBottomOf="@+id/tvReturn" />
</android.support.constraint.ConstraintLayout>